[package]
name = "urban-cli"
version = "1.0.0-pre"
edition = "2021"

[dependencies]
urban-common = { path = "../common" }
urban-runtime = { path = "../runtime" }
urban-lua = { path = "../lua" }
clap = { version = "4.1.11", features = ["cargo"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.140"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.46.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Kernel",
] }

[build-dependencies]
chrono = "0.4.24"

[[bin]]
name = "urban"
path = "src/main.rs"
